err/angle.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/angle'...
Listing './lib/python3.5/site-packages/angle-0.1.9.dist-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/astor'...
Listing './lib/python3.5/site-packages/astor-0.6.2.dist-info'...
Listing './lib/python3.5/site-packages/kast'...
Listing './lib/python3.5/site-packages/kast/tests'...
Compiling './lib/python3.5/site-packages/kast/tests/test.py'...
***   File "./lib/python3.5/site-packages/kast/tests/test.py", line 12
    print a.value
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kast/tests/test.xast.py'...
***   File "./lib/python3.5/site-packages/kast/tests/test.xast.py", line 8
    print xml.toxml()
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kast/tests/transforms'...
Listing './lib/python3.5/site-packages/kast/transforms'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/stem'...
Listing './lib/python3.5/site-packages/stem/descriptor'...
Listing './lib/python3.5/site-packages/stem/interpreter'...
Listing './lib/python3.5/site-packages/stem/response'...
Listing './lib/python3.5/site-packages/stem/util'...
Listing './lib/python3.5/site-packages/stem-1.6.0.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/transforms'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
